# banking-etl-pipeline

./: README.md  pyproject.toml
config/: config.json
docs/: account_data.txt  credit_card_data.txt  customer_data.txt  transaction_data.txt
src/ingestion/: s3_connector.py
src/loading/: readshift_loader.py
src/notebooks/: main.py  monitor.py
src/orchestration/: main.py
src/seed/: data_seed.py
src/transformation/: data_quality.py  transaction_transform.py
src/utils/: spark_session.py
