[project]
name = "banking-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyspark==4.0.0",
  "delta-spark==4.0.0rc1",
  "boto3>=1.34.0",
  "pyarrow>=15.0.0",
  "psycopg2-binary>=2.9.9", # PostgreSQL/Redshift Python driver
]
